--- a/language/Korean/strings.xml
+++ b/language/Korean/strings.xml
@@ -2,7 +2,7 @@
 <!--Language file translated with Team XBMC Translator-->
 <!--Translator: airplanez-->
 <!--Email: airplanez@gmail.com-->
-<!--Date of translation: 05/12/2010-->
+<!--Date of translation: 06/03/2010-->
 <!--$Revision$-->
 <strings>
   <string id="0">프로그램</string>
@@ -347,6 +347,7 @@
   <string id="417">보기: 큰 아이콘</string>
   <string id="418">낮은</string>
   <string id="419">높은</string>
+  <string id="420">HDMI</string>
   <string id="422">앨범 정보 삭제</string>
   <string id="423">CD 정보 삭제</string>
   <string id="424">선택</string>
@@ -557,6 +558,7 @@
   <string id="662">이 파일은 더 이상 사용할수 없습니다.</string>
   <string id="663">라이브러리에서 제거 하시겠습니까?</string>
   <string id="664">스크립트 찾기</string>
+  <string id="665">압축 수준</string>
   <string id="700">라이브러리 정리</string>
   <string id="701">라이브러리에서 오래된 노래 제거</string>
   <string id="702">이 경로는 이미 검색 되었습니다</string>
@@ -615,7 +617,6 @@
   <string id="766">밝은 회색</string>
   <string id="767">회색</string>
   <string id="770">오류 %i: 공유를 사용할수 없음</string>
-  <string id="771">- FATX 제한 자동</string>
   <string id="772">오디오 출력</string>
   <string id="773">검색</string>
   <string id="774">슬라이드쇼 폴더</string>
@@ -645,7 +646,7 @@
   <string id="850">잘못된 포트 번호가 입력됨</string>
   <string id="851">유효한 포트 범위는 1-65535 입니다</string>
   <string id="852">유효한 포트 범위는 1024-65535 입니다</string>
-  <string id="1000">화면보호기 미리보기</string>
+  <string id="1000">- 미리보기</string>
   <string id="1001">연결할수 없음</string>
   <string id="1002">XBMC가 네트워크에 연결할수 없습니다.</string>
   <string id="1003">네트워크가 연결되지 않아 발생했습니다.</string>
@@ -731,7 +732,7 @@
   <string id="1247">정상적으로 비밀번호 설정됨</string>
   <string id="1250">자동-감지</string>
   <string id="1251">시스템 자동-감지</string>
-  <string id="1252">닉네임</string>
+  <string id="1252">별명</string>
   <string id="1254">연결 요청</string>
   <string id="1255">FTP 사용자 및 비밀번호 전송</string>
   <string id="1256">핑 간격</string>
@@ -748,11 +749,9 @@
   <string id="1402">천둥</string>
   <string id="1403">햇빛</string>
   <string id="1404">많은</string>
-  <string id="1405">
-  </string>
-  <string id="1406">
-  </string>
-  <string id="1407">부근에</string>
+  <string id="1405">:</string>
+  <string id="1406"> </string>
+  <string id="1407">국지적인</string>
   <string id="1408">얼음</string>
   <string id="1409">눈</string>
   <string id="1410">온화함</string>
@@ -765,9 +764,13 @@
   <string id="1417">싸래기눈</string>
   <string id="1418">뇌우</string>
   <string id="1419">뇌우</string>
+  <string id="1420">온화함</string>
   <string id="1450">대기일때 화면 끄기</string>
   <string id="2050">상영시간</string>
   <string id="2100">스크립트 실패! : %s</string>
+  <string id="2101">새 버전이 필요함 - 로그를 보세요</string>
+  <string id="2102">그래픽 카드</string>
+  <string id="2103">요구상항이 충족되지 않음 - 로그를 보세요</string>
   <string id="4501">LCD/VFD 사용</string>
   <string id="10000">홈</string>
   <string id="10001">프로그램</string>
@@ -1009,20 +1012,13 @@
   <string id="13281">하드웨어</string>
   <string id="13283">운영체제:</string>
   <string id="13284">CPU 속도:</string>
-  <string id="13285">감지된 BIOS:</string>
   <string id="13286">비디오 인코더:</string>
   <string id="13287">화면 해상도:</string>
-  <string id="13288">Xbox 버전:</string>
-  <string id="13289">Xbox 일련번호:</string>
-  <string id="13290">Xbox 제조사:</string>
-  <string id="13291">개조칩:</string>
   <string id="13292">A/V 케이블:</string>
-  <string id="13293">비디오 &amp; XBE 지역:</string>
   <string id="13294">DVD 지역:</string>
   <string id="13295">인터넷:</string>
   <string id="13296">연결됨</string>
   <string id="13297">연결안됨. 네트워크 설정을 확인하세요.</string>
-  <string id="13298">xbox 라이브 키:</string>
   <string id="13299">설정 온도</string>
   <string id="13300">팬 속도</string>
   <string id="13301">자동 온도 조절</string>
@@ -1061,8 +1057,6 @@
   <string id="13334">라벨 수정</string>
   <string id="13335">기본값 사용</string>
   <string id="13336">버튼 제거</string>
-  <string id="13338">전면 LED</string>
-  <string id="13339">전면 LED 색깔</string>
   <string id="13340">변경안함</string>
   <string id="13341">녹색</string>
   <string id="13342">주황</string>
@@ -1141,6 +1135,7 @@
   <string id="13427">하드웨어 가속 허용 (DXVA2)</string>
   <string id="13428">하드웨어 가속 허용 (CrystalHD)</string>
   <string id="13429">하드웨어 가속 허용 (VDADecoder)</string>
+  <string id="13430">하드웨어 가속 허용 (OpenMax)</string>
   <string id="13500">A/V 동기 방식</string>
   <string id="13501">오디오 클럭</string>
   <string id="13502">비디오 클럭 (오디오 버림/반복)</string>
@@ -1160,7 +1155,7 @@
   <string id="13612">유니버셜 리모트</string>
   <string id="13613">멀티 리모트 (하모니)</string>
   <string id="13620">애플 리모트 오류</string>
-  <string id="13621">애플 리모트 지원을 사용함으로 할수 있습니다..</string>
+  <string id="13621">애플 리모트 지원을 사용할수 있습니다.</string>
   <string id="14000">연결재생</string>
   <string id="14001">연결재생 해제</string>
   <string id="14003">재생목록 파일 다운로드중...</string>
@@ -1378,11 +1373,6 @@
   <string id="16103">시청으로 표시</string>
   <string id="16104">미시청으로 표시</string>
   <string id="16105">제목 수정</string>
-  <string id="16106">NTSC-M &amp; NTSC-J 사용</string>
-  <string id="16107">NTSC-M 만 사용</string>
-  <string id="16108">NTSC-J 만 사용</string>
-  <string id="16109">PAL-60 만 사용</string>
-  <string id="16110">60hz 게임</string>
   <string id="16200">동작 중지됨</string>
   <string id="16201">복사 실패</string>
   <string id="16202">최소 한개의 파일 복사 실패</string>
@@ -1581,13 +1571,12 @@
   <string id="20184">EXIF 정보를 이용해 사진 회전</string>
   <string id="20185">TV 쇼에서 포스터 보기 스타일 사용</string>
   <string id="20186">기다려 주세요</string>
-  <string id="20187">EEPROM 백업</string>
-  <string id="20188">BIOS 백업</string>
   <string id="20189">줄거리 &amp; 리뷰에 자동 스크롤 사용</string>
   <string id="20190">사용자 지정</string>
   <string id="20191">디버그 로그인 사용</string>
   <string id="20192">업데이트중에 추가 정보 다운로드</string>
-  <string id="20194">음악 정보을 위한 기본 서비스</string>
+  <string id="20193">앨범 정보을 위한 기본 서비스</string>
+  <string id="20194">아티스트 정보을 위한 기본 서비스</string>
   <string id="20195">자료수집기 변경</string>
   <string id="20196">음악 라이브러리 내보내기</string>
   <string id="20197">음악 라이브러리 가져오기</string>
@@ -1613,15 +1602,7 @@
   <string id="20312">일시중지때 LCD 흐리게</string>
   <string id="20313">일시중지때 LED 켜기</string>
   <string id="20314">비디오 - 라이브러리</string>
-  <string id="20315">게임 세이브</string>
   <string id="20316">정렬: 아이디</string>
-  <string id="20317">세이브 다운로드</string>
-  <string id="20318">HDD에 설치된 게임 저장</string>
-  <string id="20319">게임 세이브 다운로드 실패</string>
-  <string id="20320">다운로드 및 설치할 게임 세이브를 선택</string>
-  <string id="20321">지정한 게임에 대한 온라인 세이브 찾지 못함</string>
-  <string id="20322">게임 세이브로 가기</string>
-  <string id="20323">게임 세이브</string>
   <string id="20324">부분 재생...</string>
   <string id="20325">조정값 초기화</string>
   <string id="20326">기본값으로 %s 조정값를</string>
@@ -1842,6 +1823,8 @@
   <string id="21448">자막 언어</string>
   <string id="21449">리모콘이 키보드 누름 보냄</string>
   <string id="21450">- 수정</string>
+  <string id="21451">인터넷 연결이 필요함.</string>
+  <string id="21452">더 가져오기</string>
   <string id="21800">파일 이름</string>
   <string id="21801">파일 경로</string>
   <string id="21802">파일 크기</string>
@@ -1968,16 +1951,22 @@
   <string id="24002">추가기능 옵션</string>
   <string id="24003">추가기능 정보</string>
   <string id="24005">플러그인</string>
-  <string id="24007">자료수집기</string>
+  <string id="24007">영화 정보</string>
   <string id="24008">화면보호기</string>
   <string id="24009">스크립트</string>
   <string id="24010">시각화</string>
   <string id="24011">추가기능 저장소</string>
+  <string id="24012">자막</string>
+  <string id="24013">가사</string>
+  <string id="24014">TV 정보</string>
+  <string id="24015">뮤직비디오 정보</string>
+  <string id="24016">앨범 정보</string>
+  <string id="24017">아티스트 정보</string>
   <string id="24020">설정</string>
   <string id="24021">사용안함</string>
   <string id="24022">사용함</string>
   <string id="24023">추가기능 중지됨</string>
-  <string id="24027">날씨 서비스</string>
+  <string id="24027">날씨</string>
   <string id="24028">Weather.com (표준)</string>
   <string id="24030">이 추가기능은 설정할수 없음</string>
   <string id="24031">설정 읽기 오류</string>
@@ -1986,14 +1975,18 @@
   <string id="24034">업데이트 확인</string>
   <string id="24035">강제 새로고침</string>
   <string id="24036">로그 변경</string>
+  <string id="24037">제거</string>
+  <string id="24038">설치</string>
+  <string id="24039">사용되지않는 추가기능</string>
   <string id="24050">사용가능한 추가기능</string>
   <string id="24051">버전:</string>
   <string id="24052">권리포기</string>
   <string id="24053">라이센스:</string>
+  <string id="24054">변경로그</string>
   <string id="24059">이 추가기능을 사용함으로 하시겠습니까?</string>
   <string id="24060">이 추가기능을 사용안함으로 하시겠습니까?</string>
   <string id="24061">추가기능 업데이트 사용가능!</string>
-  <string id="24062">추가기능 사용함</string>
+  <string id="24062">사용되는 추가기능</string>
   <string id="24063">자동 업데이트</string>
   <string id="24064">추가기능 사용됨</string>
   <string id="24065">추가기능 업데이트됨</string>
@@ -2013,7 +2006,6 @@
   <string id="29800">라이브러리 모드</string>
   <string id="29801">쿼티 키보드</string>
   <string id="29802">패스스루 오디오 사용중</string>
-  <string id="29999">게임에 깜박임 필터 설정 적용</string>
   <string id="30011">재생시간 찾기</string>
   <string id="33001">예고편 품질</string>
   <string id="33002">스트림</string>
@@ -2091,6 +2083,7 @@
   <string id="34002">Wav</string>
   <string id="34003">DXVA2</string>
   <string id="34004">VAAPI</string>
+  <string id="34005">Flac</string>
   <string id="34100">스피커 설정</string>
   <string id="34101">2.0</string>
   <string id="34102">2.1</string>
