fixed: added PVR clients again to reworked addon framework fixed: PVR is now partly working again
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/pvr-testing2@30823 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -2553,6 +2553,7 @@
   <string id="24015">Musicvideo information</string>
   <string id="24016">Album information</string>
   <string id="24017">Artist information</string>
+  <string id="24018">PVR clients</string>
 
   <string id="24020">Configure</string>
   <string id="24021">Disable</string>
