[DSPlayer] added: Pixel shaders support on the GUI
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/branches/dsplayer@30966 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -2313,6 +2313,9 @@
   <string id="35013">Stats medium</string>
   <string id="35014">Stats large</string>
   <string id="35015">Renderer stats</string>
+  <string id="35016">Shaders</string>
+  <string id="32017">Shaders list</string>
+  <string id="32018">There is no shader loaded</string>
 
   <!--  35050-35100 Directshow Subtitles -->
   <string id="35050">- Border line</string>
