added: configure option for specifying default LIRC device
The default LIRC device location was changed in LIRC 0.8.6 from
/dev/lircd to /var/run/lirc/lircd. Add --with-lirc-device=file
configure option to select the default device location at build time.
This can still be overridden at run time.

/dev/lircd is kept as the XBMC default for now.

git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@30976 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/docs/manpages/xbmc.bin.1
+++ b/docs/manpages/xbmc.bin.1
@@ -24,7 +24,7 @@ XBMC will look for configurations in install folder instead of ~/.xbmc
 Enables screen resolutions such as PAL, NTSC, etc.
 .TP
 \fB\-l\fR or \fB\-\-lircdev\fR
-LircDevice to use default is /dev/lircd .
+LircDevice to use. See \-\-help output for the default.
 .TP
 \fB\-n\fR or \fB\-\-nolirc\fR
 do not use Lirc, aka no remote input.
