Plex App Store is now Plex Online

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -236,8 +236,8 @@
   
 <!-- Plex additions -->
   <string id="31950">Go to your</string>
-  <string id="31951">Go to the</string>
-  <string id="31952">App Store</string>
+  <string id="31951">Visit</string>
+  <string id="31952">Plex Online</string>
   <string id="31953">Get</string>
   <string id="31954">Help</string>
   <string id="31955">Preferences</string>
