Added: Summary Text to the Add-on selector value for "None" (Clear the current setting)
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@31001 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -2156,6 +2156,7 @@
   <string id="24037">Uninstall</string>
   <string id="24038">Install</string>
   <string id="24039">Disabled Add-ons</string>
+  <string id="24040">(Clear the current setting)</string>
 
   <string id="24050">Available Add-ons</string>
   <string id="24051">Version:</string>
